--- a/protocol/makefile
+++ b/protocol/makefile
@@ -1,17 +1,11 @@
 NAME=dokumentace
 all: $(NAME).pdf clean
 
-$(NAME).pdf: $(NAME).ps
-	ps2pdf $(NAME).ps
-
-$(NAME).ps: $(NAME).dvi
-	dvips -t a4 $(NAME).dvi
-
-$(NAME).dvi: $(NAME).tex
-	latex $(NAME).tex
+$(NAME).pdf: $(NAME).tex
+	pdflatex $(NAME).tex
 	bibtex $(NAME)
-	latex $(NAME).tex
-	latex $(NAME).tex
+	pdflatex $(NAME).tex
+	pdflatex $(NAME).tex
 
 clean:
 	-rm $(NAME).ps $(NAME).dvi $(NAME).aux $(NAME).toc $(NAME).log $(NAME).bbl $(NAME).blg
