--- a/src/fyoprojekt/resources/FyoView.properties
+++ b/src/fyoprojekt/resources/FyoView.properties
@@ -30,3 +30,8 @@ StatusBar.busyIcons[11] = busyicons/busy-icon11.png
 StatusBar.busyIcons[12] = busyicons/busy-icon12.png
 StatusBar.busyIcons[13] = busyicons/busy-icon13.png
 StatusBar.busyIcons[14] = busyicons/busy-icon14.png
+jSplitPane1.TabConstraints.tabTitle=Hubble
+jSplitPane2.TabConstraints.tabTitle=Webb
+jTabbedPane1.AccessibleContext.accessibleName=Hubble
+jLabel1.text=jLabel1
+jLabel2.text=jLabel2
