--- a/src/fyoprojekt/resources/FyoView.properties
+++ b/src/fyoprojekt/resources/FyoView.properties
@@ -33,5 +33,19 @@ StatusBar.busyIcons[14] = busyicons/busy-icon14.png
 jSplitPane1.TabConstraints.tabTitle=Hubble
 jSplitPane2.TabConstraints.tabTitle=Webb
 jTabbedPane1.AccessibleContext.accessibleName=Hubble
-jLabel1.text=jLabel1
-jLabel2.text=jLabel2
+jLabel1.text=Parametr a
+jLabel2.text=Parametr b
+jLabel3.text=Prim\u00e1rn\u00ed zrcadlo
+jLabel8.text=Sekund\u00e1rn\u00ed zrcadlo
+jLabel9.text=Parametr a
+jLabel11.text=Parametr b
+jLabel13.text=Posun
+hPrimaryA.text=jLabel4
+hPrimaryB.text=jLabel5
+hSecondaryA.text=jLabel10
+hSecondaryB.text=jLabel12
+hOffset.text=jLabel14
+hSecondaryEccentricity.text=Excentricita
+hSecondaryRadius.text=Polom\u011br k\u0159ivosti
+hPrimaryRadius.text=Polom\u011br k\u0159ivosti
+hPrimaryEccentricity.text=Excentricita:
